deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: discurd
  labels:
    app.kubernetes.io/part-of: discurd
